# SVMLightClassifier

./: .gitignore
src/: CMakeLists.txt  SvmLightLib.cpp  SvmLightLib.h  main.cpp  train_HOG.cpp
src/svm/: svm_learn_main.c  svm_struct_main.c
